--- a/templates/my-repo-branch-job-template.yml.erb
+++ b/templates/my-repo-branch-job-template.yml.erb
@@ -1,7 +1,7 @@
 - name: my-repo-branch-job-<%= branch_name %>
   plan:
   - get: my-repo-branch
-    resource: my-repo-branch-<%= branch_name %>
+    resource: git-branch-<%= branch_name %>
     params: {depth: 20}
     trigger: true
   - task: my-repo-branch-task
