--- a/templates/job-template.yml.erb
+++ b/templates/job-template.yml.erb
@@ -1,4 +1,4 @@
-- name: <%= branch_name %>
+- name: lint-<%= branch_name %>
   plan:
   - get: git-branch
     resource: git-branch-<%= branch_name %>
@@ -6,6 +6,15 @@
     trigger: true
   - task: git-branch-task
     file: git-branch/concourse.yml
+    config:
+      params:
+        BRANCH_NAME: <%= branch_name %>
+
+- name: unit-tests-<%= branch_name %>
+  plan:
+  - task:
+    file: git-branch/concourse.yml
+    passed: [lint-<%= branch_name %>]
     config:
       params:
         BRANCH_NAME: <%= branch_name %>
