--- a/templates/job-template.yml.erb
+++ b/templates/job-template.yml.erb
@@ -22,3 +22,17 @@
     config:
       params:
         BRANCH_NAME: <%= branch_name %>
+
+
+- name: push-to-pcf-<%= branch_name %>
+  plan:
+  - get: git-branch
+    resource: git-branch-<%= branch_name %>
+    passed: [lint-<%= branch_name %>]
+    params: {depth: 20}
+    trigger: true
+  - task: sometask
+    file: git-branch/concourse.yml
+    config:
+      params:
+        BRANCH_NAME: <%= branch_name %>
