--- a/templates/resource-template.yml.erb
+++ b/templates/resource-template.yml.erb
@@ -3,3 +3,9 @@
   source:
     uri: <%= uri %>
     branch: <%= branch_name %>
+
+- name: concourse-configs
+  type: git
+  source:
+    uri: https://github.com/dzmitry-moisa/concourse-configs.git
+    branch: master
