Add dummy resources

--- a/templates/resource-template.yml.erb
+++ b/templates/resource-template.yml.erb
@@ -3,3 +3,9 @@
   source:
     uri: <%= uri %>
     branch: <%= branch_name %>
+
+- name: lint-reports
+  type: dummy
+
+- name: unit-test-reports
+  type: dummy
