--- a/templates/resource-template.yml.erb
+++ b/templates/resource-template.yml.erb
@@ -7,6 +7,6 @@
 - name: lint-reports-<%= branch_name %>
   type: dummy
 
-- name: unit-test-reports-<%= branch_names %>
+- name: unit-test-reports-<%= branch_name %>
   type: dummy
 
