--- a/templates/resource-template.yml.erb
+++ b/templates/resource-template.yml.erb
@@ -4,6 +4,12 @@
     uri: <%= uri %>
     branch: <%= branch_name %>
 
+- name: concourse-configs
+  type: git
+  source:
+    uri: https://github.com/dzmitry-moisa/concourse-configs.git
+    branch: master
+
 - name: lint-reports-<%= branch_name %>
   type: dummy
 
