Set resource name

--- a/templates/resource-template.yml.erb
+++ b/templates/resource-template.yml.erb
@@ -4,7 +4,7 @@
     uri: <%= uri %>
     branch: <%= branch_name %>
 
-- name: concourse-configs
+- name: concourse-configs-<%= branch_name %>
   type: git
   source:
     uri: https://github.com/dzmitry-moisa/concourse-configs.git
