Make concourse configs common resource

--- a/templates/common-resources-template.yml.erb
+++ b/templates/common-resources-template.yml.erb
@@ -1,6 +1,5 @@
-- name: my-repo-common-resource-master
+- name: concourse-configs
   type: git
   source:
-    uri: <%= uri %>
+    uri: https://github.com/dzmitry-moisa/concourse-configs.git
     branch: master
-
