Update property set

--- a/templates/job-template.yml.erb
+++ b/templates/job-template.yml.erb
@@ -61,4 +61,4 @@
     file: concourse-configs/tasks/ui-tests.yml
     config:
       params:
-        TESTING_URL=<%= repo_name %>-<%= branch_name %>.apps.pcfdemo.tk
+        TESTING_URL: <%= repo_name %>-<%= branch_name %>.apps.pcfdemo.tk
