Set trigger for ui tests

--- a/templates/job-template.yml.erb
+++ b/templates/job-template.yml.erb
@@ -57,6 +57,7 @@
     resource: concourse-configs
     params: {depth: 20}
     passed: [push-to-pcf-<%= branch_name %>]
+    trigger: true
   - task: run-unit-tests
     file: concourse-configs/tasks/ui-tests.yml
     config:
