--- a/templates/job-template.yml.erb
+++ b/templates/job-template.yml.erb
@@ -1,7 +1,7 @@
 - name: lint-<%= branch_name %>
   plan:
   - get: drupal-app-git
-    resource: drupal-app-git<%= branch_name %>
+    resource: drupal-app-git-<%= branch_name %>
     trigger: true
   - task: lint-task
     file: drupal-app-git-<%= branch_name %>/ci/tasks/lint.yml
@@ -9,7 +9,7 @@
 
 - name: unit-tests-<%= branch_name %>
   plan:
-  - get: git-branch
+  - get: drupal-app-git
     resource: drupal-app-git-<%= branch_name %>
     trigger: true
   - task: unit-tests-task
