--- a/templates/job-template.yml.erb
+++ b/templates/job-template.yml.erb
@@ -4,7 +4,7 @@
     resource: drupal-app-git-<%= branch_name %>
     trigger: true
   - task: lint-task
-    file: drupal-app-git-<%= branch_name %>/ci/tasks/lint.yml
+    file: drupal-app-git/ci/tasks/lint.yml
   - put: lint-reports-<%= branch_name%>
 
 - name: unit-tests-<%= branch_name %>
@@ -16,5 +16,5 @@
     passed: [lint-<%= branch_name %>]
     trigger: true
   - task: unit-tests-task
-    file: drupal-app-git-<%= branch_name %>/ci/tasks/unit-tests.yml
+    file: drupal-app-git/ci/tasks/unit-tests.yml
   - put: unit-test-reports-<%= branch_name%>
